# lionel3

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  styles.css  vite.config.js.timestamp-1680325325977.mjs
.github/workflows/: deno.yml
api/: Cargo.toml  Shuttle.toml  documentation.md  students.json
api/src/: bulletin.rs  calendar.rs  homework.rs  main.rs  structs.rs  student_helpers.rs  timetable.rs  verification.rs
api/timetables/: 9668.ics
lionel3/: package-lock.json  package.json
lionel3/src/: App.css  App.js  App.jsx  index.js  main.jsx
reOrganizedData/: aaa.py
reOrganizedData/20baileyja2/: classes.txt  timetable.txt
reOrganizedData/20choymn1/: classes.txt  timetable.txt
reOrganizedData/20georger3/: classes.txt  timetable.txt
reOrganizedData/20tsoice2/: classes.txt  timetable.txt
reOrganizedData/20wonglm2/: classes.txt  timetable.txt
reOrganizedData/20wongn1/: classes.txt  timetable.txt
reOrganizedData/21agrawald1/: classes.txt  timetable.txt
reOrganizedData/21anandv1/: classes.txt  timetable.txt
reOrganizedData/21caseysa1/: classes.txt  timetable.txt
reOrganizedData/21chanmh1/: classes.txt  timetable.txt
reOrganizedData/21chengjk1/: classes.txt  timetable.txt
reOrganizedData/21cheuklc1/: classes.txt  timetable.txt
reOrganizedData/21cheungc3/: classes.txt  timetable.txt
reOrganizedData/21cheungfc1/: classes.txt  timetable.txt
reOrganizedData/21cheungot1/: classes.txt  (+1 more)
routes/: index.tsx
server/: index.js  package.json
src/: App.jsx  aaa.txt  main.jsx
test/: test.ts
(+3675 files in other folders)
