[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
substring = "1.4.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.5.2", features = ["cors", "trace"]}
uuid = "1.8.0"
