[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
error-chain = "0.12.4"
reqwest = {version = "0.12.5", features = ["blocking", "json"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
shuttle = "0.7.1"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
substring = "1.4.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.5.2", features = ["cors", "trace"]}
uuid = "1.8.0"
